[package]
name = "tools-rust"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
boxcar = "0.2.13"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["rayon", "inline"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = { version = "0.18", features = ["rayon"] }
lazy_static = "1.4"
mailparse = "0.16.1"
md5 = "0.8.0"
regex = "1.5"
tar = "0.4"
rand = "0.9.1"
num-format = "0.4"
byteorder = "1.5.0"
log = "0.4.27"
env_logger = "0.11.8"
flate2 = "1.1.2"
walkdir = "2"
rust-stemmers = "1.2.0"
rayon = "1.10.0"
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
rand_chacha = "0.9.0"
mimalloc = "0.1.47"
scc = "2.3.4"
ahash = { version = "0.8.12", features = ["serde"] }
itoa = "1.0.15"

[profile.release]
lto = true

[dev-dependencies]
tempfile = "3.20.0"
